2011-05-21	DJ Lucas <dj@linuxfromscratch.org>
  * lib/lsb/init-functions: Merged the contents of etc/init.d/lfs-functions and
    standardized comment headers.
  * etc/init.d/lfs-functions: Removed.
  * etc/default/rc, etc/default/rc.site: moved majority of etc/default/rc.site
    into etc/default/rc as the configuration items are not generally user
    configurable items.
  * etc/init.d/udev: Changed trigger commands to use both subsystem and device
    types, per udev documentation.

2011-05-18	DJ Lucas <dj@linuxfromscratch.org>
  * sbin/ifup, sbin/ifdown: Complete rewrite for use as standalone tools.
  * etc/init.d/network: Rewrote script to account for new ifup and ifdown.

2011-05-14	DJ Lucas <dj@linuxfromscratch.org>
  * etc/default/rc.site: Added FAILURE_ACTION variable for use in remote
    systems where user input is not appropriate in the event of a failure.
  * etc/default/rc.site: Moved configuration of clock and hostname to rc.site
  * etc/init.d/setclock: Removed provides '$time' and added provides 'hwclock'.
  * etc/init.d/rc: Setup the /run mountpoint (for use by bootloging).
  * sysconfig/network-devices/services/*: Moved service scripts to
    /lib/network-services.
  * sysconfig/network-devices/*: Moved network configuration files to
    /etc/network.
  * sysconfig/network-devices/*: Moved ifup and ifdown scripts to /sbin.
  * sbin/ifup: Copy network configuration scritps to /run on startup.
  * sbin/ifdown: Use running configuration stored in /run to stop interfaces.
  * etc/sysoconfig/*: Moved sysconfig files to /etc/default.
  * ect/lsb-config, lsb/manage-functions: Removed (unused).
  * /: Changed layout to include full installation paths inside of archive.

2011-04-24	Bruce Dubbs <bdubbs@linuxfromscratch.org>
  * init.d/mountvirtfs: Sync to LFS-Bootscripts-20110424 - Add creation of
    /run/{var,lock,shm}.
  * init.d/udev: Sync to LFS-Bootscripts-20110424 - Add /dev/shm -> /run/shm
    symlink.
